# it_one_test_task

./: .env.example  .gitignore  README.md  TASK.md  docker-compose.yaml  pyproject.toml
src/it_one_test_task/: __main__.py  main.py  services.py  settings.py  utils.py  web.py
src/it_one_test_task/db/: manager.py  models.py
src/it_one_test_task/public/: index.html
src/it_one_test_task/services/: parser.py  search.py
src/tests/: test_parser.py  utils.py
src/tests/data/: test_parse_mail_log_entry.json  test_parse_mail_log_id_value.json
